syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "battle_summary_dto.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message HeroFinishWaveResponse {
  google.protobuf.BytesValue battle_id = 1;
  BattleSummaryDto result = 2;
}
