syntax = "proto3";
import "battle_summary_dto.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message HeroStartBattleResponse {
  google.protobuf.BytesValue battle_id = 1;
  BattleSummaryDto result = 2;
}
