syntax = "proto3";
import "google/protobuf/any.proto";
option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message SingleItemCommunicationDto {
  google.protobuf.Any packed_message = 1;
}
